--- a/rest/src/main/resources/shiro.ini
+++ b/rest/src/main/resources/shiro.ini
@@ -21,4 +21,4 @@
 # The 'urls' section is used for url-based security
 # in web applications.  We'll discuss this section in the
 # Web documentation
-/rest = authcBasic
+#/rest = authcBasic
