--- a/rest/src/main/webapp/WEB-INF/web.xml
+++ b/rest/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
 <!--    <filter>-->
 <!--        <filter-name>securityFilter</filter-name>-->
-<!--        <filter-class>org.apache.shiro.web.servlet.IniShiroFilter</filter-class>-->
+<!--        <filter-class>org.apache.shiro.web.servlet.ShiroFilter</filter-class>-->
 <!--    </filter>-->
 <!--    <filter-mapping>-->
 <!--        <filter-name>securityFilter</filter-name>-->
