fix login exceptions

--- a/rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/rest/src/main/webapp/WEB-INF/shiro.ini
@@ -8,12 +8,14 @@ passwordService = ru.training.karaf.rest.password.PasswordService
 passwordMatcher = ru.training.karaf.rest.password.Matcher
 passwordMatcher.passwordService = $passwordService
 myRealm = ru.training.karaf.rest.realm.MyCustomRealm
+manager = ru.training.karaf.rest.sessionManager.Manager
 myRealm.credentialsMatcher = $passwordMatcher
 securityManager.realms = $myRealm
+securityManager.sessionManager = $manager
+authFilter = ru.training.karaf.rest.filter.AuthFilter
 
 
 [urls]
-
 /rest/users/registration/* = anon
 /rest/users/login/* = anon
-/rest/* = authc
+/rest/* = authFilter
