update shiro.ini and rest

--- a/rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/rest/src/main/webapp/WEB-INF/shiro.ini
@@ -14,8 +14,41 @@ securityManager.realms = $myRealm
 securityManager.sessionManager = $manager
 authFilter = ru.training.karaf.rest.filter.AuthFilter
 
-
 [urls]
+#          USER
 /rest/users/registration/* = anon
 /rest/users/login/* = anon
-/rest/* = authFilter
+/rest/users/** = authFilter
+#          AUTHOR
+/rest/author/** = anon
+/rest/author/delete/* = authFilter
+/rest/author/update/* = authFilter
+/rest/author/create = authFilter
+#          BOOK
+/rest/book/** = anon
+/rest/book/author/adding = authFilter
+/rest/book/image/adding = authFilter
+/rest/book/create = authFilter
+/rest/book/update/* = authFilter
+/rest/book/delete/* = authFilter
+#          GENRE
+/rest/genre/** = anon
+/rest/genre/create = authFilter
+/rest/genre/update/* = authFilter
+/rest/genre/delete/* = authFilter
+#          REVIEW
+/rest/review/** = anon
+/rest/review/create = authFilter
+/rest/review/update/* = authFilter
+/rest/review/delete/* = authFilter
+#          ROLE
+/rest/role/** = anon
+/rest/role/create = authFilter
+/rest/role/update/* = authFilter
+/rest/role/delete/* = authFilter
+#          COUNT
+/rest/count/** = anon
+
+
+
+
