create default role

--- a/rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/rest/src/main/webapp/WEB-INF/shiro.ini
@@ -26,7 +26,7 @@ authFilter = ru.training.karaf.rest.filter.AuthFilter
 /rest/author/create = authFilter
 #          BOOK
 /rest/book/** = anon
-/rest/book/author/adding = authFilter
+/rest/book/author/adding/** = authFilter
 /rest/book/image/adding = authFilter
 /rest/book/create = authFilter
 /rest/book/update/* = authFilter
