fix problem with creating

--- a/rest/src/main/webapp/WEB-INF/shiro.ini
+++ b/rest/src/main/webapp/WEB-INF/shiro.ini
@@ -16,8 +16,8 @@ authFilter = ru.training.karaf.rest.filter.AuthFilter
 
 [urls]
 #          USER
-/rest/users/registration/* = anon
-/rest/users/login/* = anon
+/rest/users/registration = anon
+/rest/users/login = anon
 /rest/users/** = authFilter
 #          AUTHOR
 /rest/author/** = anon
